RESOLVED FIXED 50683
REGRESSION: r73429-r73490: Some Contextual menu items non-functional, such as Open Link in New Tab
https://bugs.webkit.org/show_bug.cgi?id=50683
Summary REGRESSION: r73429-r73490: Some Contextual menu items non-functional, such as...
Kevin M. Dean
Reported 2010-12-08 06:33:39 PST
Some of the contextual menu items are non-functional: Open Link in New Tab Download Linked File As... Add Link to Bookmarks... Open Image in New Tab Save Image As... Save Image to "Downloads" These still work: Open Link in New Window Download Linked File Copy Link Open Image in New Window
Attachments
[PATCH] Fix (1.34 KB, patch)
2010-12-08 15:15 PST, Brian Weinstein
sullivan: review+
Alexey Proskuryakov
Comment 1 2010-12-08 13:39:59 PST
*** Bug 50686 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 2 2010-12-08 13:41:25 PST
Sam, was this broken by WebKit2 work?
Brady Eidson
Comment 3 2010-12-08 13:56:52 PST
Kevin, is this in WK2, or in normal WebKit?
Alexey Proskuryakov
Comment 4 2010-12-08 14:08:49 PST
This is about WebKit nightlies, so WebKit1.
Brady Eidson
Comment 5 2010-12-08 14:10:06 PST
I saw no indication it was about WebKit Nightlies. If it broke somewhere in this range since yesterday, it was almost certainly some refactoring from Brian.
Brian Weinstein
Comment 6 2010-12-08 14:19:52 PST
(In reply to comment #5) > I saw no indication it was about WebKit Nightlies. > > If it broke somewhere in this range since yesterday, it was almost certainly some refactoring from Brian. I believe it could be a manifestation of: https://bugs.webkit.org/show_bug.cgi?id=50665 Testing my patch to see if it fixes this issue.
Alexey Proskuryakov
Comment 7 2010-12-08 15:07:53 PST
*** Bug 50694 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 8 2010-12-08 15:09:37 PST
*** Bug 50693 has been marked as a duplicate of this bug. ***
Brian Weinstein
Comment 9 2010-12-08 15:15:19 PST
Created attachment 75978 [details] [PATCH] Fix
Brian Weinstein
Comment 10 2010-12-08 15:22:25 PST
Brian Weinstein
Comment 11 2010-12-08 15:34:56 PST
Landed in r73560.
Alexey Proskuryakov
Comment 12 2010-12-09 10:00:42 PST
*** Bug 50765 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 13 2010-12-09 22:25:09 PST
*** Bug 50798 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 14 2010-12-10 10:58:34 PST
*** Bug 50812 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 15 2010-12-11 10:37:22 PST
*** Bug 50870 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.