REGRESSION: r73429-r73490: Some Contextual menu items non-functional, such as Open Link in New Tab https://bugs.webkit.org/show_bug.cgi?id=50683

Reviewed by John Sullivan.

If our context menu item already has an action, don't overwrite the action with the context menu
forwarder.

* WebView/WebHTMLView.mm:
(setMenuItemTarget):



Canonical link: https://commits.webkit.org/63969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73560 268f45cc-cd09-0410-ab3c-d52691b4dbfc